# myMPITimer

./: .gitignore  CMakeLists.txt
include/: MPI_Timer.hpp
src/: MPI_Timer.cpp
